# clash-royale-manager

./: .dockerignore  .gitignore  .pylintrc  Dockerfile  README.md  alembic.ini  docker-compose.yml  dockerfile  makefile  pyproject.toml  requirements.txt
app/: __init__.py
app/core/: __init__.py  config.py  constants.py  logger.py  utils.py
app/database/: __init__.py  base.py  session.py
app/database/migrations/: env.py
app/database/migrations/versions/: 75322d62dbd9_initial_schema.py  98f79a5781b4_add_river_race_support.py  a1f3c9d2e7b4_add_river_race_completion_flag.py
app/database/models/: __init__.py  member.py  promotion_score.py  river_race.py  snapshot.py  war_participation.py  war_season.py
app/integrations/discord/: bot.py  reports.py
app/scheduler/: jobs.py  scheduler.py
app/services/: clan_service.py  clash_api.py  dashboard_service.py  member_service.py  score_service.py  snapshot_service.py  war_service.py
dashboard/: home.py
dashboard/pages/: _01_overview.py  _02_members.py  _03_player.py  _03_wars.py  _04_promotions.py  _05_settings.py  _05_wars.py  _06_settings.py
scripts/: collect_data.py  init_db.py  run_scheduler.py
tests/: conftest.py  test_clan_service.py  test_dashboard_service.py  test_db.py  test_discord.py  test_member_service.py  test_scheduler_jobs.py  test_score_engine.py  test_snapshot_service.py  test_war_service.py
