[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clash-royale-manager"
version = "1.0.0"
description = "A dashboard to manage and analyze Clash Royale clan data, including member activity, war performance, and promotion scores."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "Raphael Smilet", email = "your.email@example.com"},
]
keywords = ["clash-royale", "dashboard", "sqlalchemy", "fastapi", "streamlit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Framework :: Streamlit",
    "Topic :: Database",
]

dependencies = [
    # Core
    "fastapi==0.136.3",
    "uvicorn==0.49.0",
    "sqlalchemy==2.0.50",
    "alembic==1.18.4",
    "pandas==3.0.3",
    "streamlit==1.58.0",
    "APScheduler==3.11.2",
    "python-dotenv==1.2.2",
    "requests==2.34.2",
    "requests-cache==1.3.2",
    "tenacity==9.1.4",
]

[project.optional-dependencies]
dev = [
    # Development
    "pytest==9.0.3",
    "pytest-mock==3.15.1",
    "freezegun==1.5.5",
    "black==26.5.1",
    "pylint>=3.0.0",
    "mypy>=1.8.0",
    "sqlalchemy2-stubs>=0.0.2a35",
    "types-requests>=2.31.0",
]

[project.scripts]
init_db = "scripts.init_db:init_db"
collect_data = "scripts.collect_data:collect_data"

[project.urls]
Homepage = "https://github.com/raphaeldp/clash-royale-manager"
Documentation = "https://github.com/raphaeldp/clash-royale-manager#readme"
Issues = "https://github.com/raphaeldp/clash-royale-manager/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "dashboard*", "scripts*", "tests*"]

[tool.black]
line-length = 88
target-version = ["py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | migrations
  | __pycache__
  | \.mypy_cache
  | \.pylint
)/
'''

[tool.pylint.main]
python-version = "3.12"
ignore = ["venv", ".venv", "__pycache__", ".git", "logs", "data", "secrets", "migrations"]
disable = [
    "C0114",  # Missing module docstring (handled by file headers)
    "C0115",  # Missing class docstring (handled by class docstrings)
    "C0116",  # Missing function docstring (handled by function docstrings)
    "W0611",  # Unused import (allowed for future-proofing)
    "E0401",  # Import error (Streamlit is optional for backend)
]
enable = ["all"]
max-line-length = 88
good-names = ["id", "db", "st", "e"]

[tool.pylint.messages_control]
disable = [
    "too-many-ancestors",
    "too-few-public-methods",
    "duplicate-code",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "streamlit.*",
    "discord.*",
    "apscheduler.*",
    "sqlalchemy.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
python_files = "test_*.py"
testpaths = ["tests"]
addopts = "-v --tb=short"
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["app", "dashboard"]
omit = ["*/tests/*", "*/__init__.py", "*/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]